--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -6,33 +6,19 @@ on:
       - main # or your main branch name
 
 jobs:
-  build:
+  publish_image:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker image
+        run: |
+          docker build ./front-end-nextjs/ -t santhosh0511/nodejs-docker:latest
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u santhosh0511 --password-stdin
 
-      - name: Push latest tag
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push santhosh0511/nodejs-docker:latest
