--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main # or your main branch name
+      - main # Change if needed
 
 jobs:
   build:
@@ -12,6 +12,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Debug - Check files in workspace
+        run: ls -la
+
+      - name: Debug - Check for Dockerfile
+        run: test -f Dockerfile && echo "Dockerfile exists" || echo "Dockerfile NOT FOUND"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -25,17 +31,17 @@ jobs:
       - name: Build and push Docker image (commit SHA tag)
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: . # Change this if Dockerfile is inside another folder
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
+          cache-to: type=inline
 
       - name: Build and push Docker image (latest tag)
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: . # Change this if Dockerfile is inside another folder
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
+          cache-to: type=inline
