--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,12 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Debug - Check files in workspace
+      # Debugging - Check if files exist before build
+      - name: Debug - List all files in repo
         run: ls -la
 
-      - name: Debug - Check for Dockerfile
-        run: test -f Dockerfile && echo "Dockerfile exists" || echo "Dockerfile NOT FOUND"
+      - name: Debug - Find Dockerfile
+        run: |
+          echo "Checking for Dockerfile..."
+          find . -name "Dockerfile" || echo "Dockerfile NOT FOUND!"
 
+      # If Dockerfile is inside a subfolder, update `context: ./your-folder`
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -28,19 +32,21 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
+      # Build and push Docker image with commit SHA tag
       - name: Build and push Docker image (commit SHA tag)
         uses: docker/build-push-action@v3
         with:
-          context: . # Change this if Dockerfile is inside another folder
+          context: .  # Change this if Dockerfile is inside another folder (e.g., ./front-end-nextjs)
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
           cache-to: type=inline
 
+      # Build and push Docker image with latest tag
       - name: Build and push Docker image (latest tag)
         uses: docker/build-push-action@v3
         with:
-          context: . # Change this if Dockerfile is inside another folder
+          context: .  # Change this if Dockerfile is inside another folder (e.g., ./front-end-nextjs)
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
