--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main # Change if needed
+      - main # or your main branch name
 
 jobs:
   build:
@@ -13,41 +13,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Debugging - Check if files exist before build
-      - name: Debug - List all files in repo
-        run: ls -la
-
-      - name: Debug - Find Dockerfile
-        run: |
-          echo "Checking for Dockerfile..."
-          find . -name "Dockerfile" || echo "Dockerfile NOT FOUND!"
-
-      # If Dockerfile is inside a subfolder, update `context: ./your-folder`
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push Docker image with commit SHA tag
-      - name: Build and push Docker image (commit SHA tag)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: .  # Change this if Dockerfile is inside another folder (e.g., ./front-end-nextjs)
+          context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=inline
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
 
-      # Build and push Docker image with latest tag
-      - name: Build and push Docker image (latest tag)
+      - name: Push latest tag
         uses: docker/build-push-action@v3
         with:
-          context: .  # Change this if Dockerfile is inside another folder (e.g., ./front-end-nextjs)
+          context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=inline
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
