--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main # or your main branch nam
+      - main  # Change if needed
 
 jobs:
   build:
@@ -13,26 +13,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Set up Buildx with the correct driver
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver: docker-container
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build and push Docker image
+      # Build and push Docker image (commit SHA tag)
+      - name: Build and push Docker image (commit SHA tag)
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
 
-      - name: Push latest tag
+      # Build and push Docker image (latest tag)
+      - name: Build and push Docker image (latest tag)
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest,mode=max
