--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main  # Change if needed
+      - main
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       # Debug - Check if Dockerfile exists
-      - name: Debug - Check Dockerfile
+      - name: Debug - Check if Dockerfile exists
         run: |
           echo "Checking for Dockerfile..."
           ls -la
