--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,7 +3,7 @@ name: Build, Push, and Deploy to Railway
 on:
   push:
     branches:
-      - main
+      - main  # Triggers deployment when pushing to main branch
 
 jobs:
   build:
@@ -59,9 +59,7 @@ jobs:
         run: curl -fsSL https://railway.app/install.sh | sh
 
       - name: Authenticate Railway
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        run: railway login --token $RAILWAY_TOKEN
+        run: echo "${{ secrets.RAILWAY_TOKEN }}" | railway login --token
 
       - name: Deploy to Railway
-        run: railway up
+        run: railway up --service node-api
