--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,7 +3,7 @@ name: Build, Push, and Deploy to Railway
 on:
   push:
     branches:
-      - main  # Triggers deployment when pushing to main branch
+      - main  # Triggers deployment when pushing to the main branch
 
 jobs:
   build:
@@ -59,7 +59,7 @@ jobs:
         run: curl -fsSL https://railway.app/install.sh | sh
 
       - name: Authenticate Railway
-        run: echo "${{ secrets.RAILWAY_TOKEN }}" | railway login --token
+        run: railway auth --token "${{ secrets.RAILWAY_TOKEN }}"
 
       - name: Deploy to Railway
         run: railway up --service node-api
