--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,7 +3,7 @@ name: Build, Push, and Deploy to Railway
 on:
   push:
     branches:
-      - main  # Triggers deployment when pushing to the main branch
+      - main  # Deploy when pushing to main branch
 
 jobs:
   build:
@@ -13,18 +13,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Debug - Check if Dockerfile exists
-      - name: Debug - Check if Dockerfile exists
-        run: |
-          echo "Checking for Dockerfile..."
-          ls -la
-          find . -name "Dockerfile" || echo "Dockerfile NOT FOUND!"
-
-      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          driver: docker-container
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -32,23 +22,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      # Build and push Docker image (commit SHA tag)
-      - name: Build and push Docker image (commit SHA tag)
-        uses: docker/build-push-action@v3
-        with:
-          context: .  
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-
-      # Build and push Docker image (latest tag)
-      - name: Build and push Docker image (latest tag)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
           context: .  
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -58,8 +37,5 @@ jobs:
       - name: Install Railway CLI
         run: curl -fsSL https://railway.app/install.sh | sh
 
-      - name: Authenticate Railway
-        run: railway auth --token "${{ secrets.RAILWAY_TOKEN }}"
-
       - name: Deploy to Railway
-        run: railway up --service node-api
+        run: RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }} railway up --service node-api
