--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: .  
+          context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/nodejs-docker:latest
 
@@ -38,4 +38,6 @@ jobs:
         run: curl -fsSL https://railway.app/install.sh | sh
 
       - name: Deploy to Railway
-        run: RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }} railway up --service node-api
+        run: |
+          railway login --token ${{ secrets.RAILWAY_TOKEN }}
+          railway up --service node-api
