--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -37,7 +37,10 @@ jobs:
       - name: Install Railway CLI
         run: curl -fsSL https://railway.app/install.sh | sh
 
-      - name: Deploy to Railway
+      - name: Login to Railway
         run: |
-          railway login --token ${{ secrets.RAILWAY_TOKEN }}
-          railway up --service node-api
+          export RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }}
+          railway login
+
+      - name: Deploy to Railway
+        run: railway up --service node-api
