--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -37,10 +37,17 @@ jobs:
       - name: Install Railway CLI (Update)
         run: curl -fsSL https://railway.app/install.sh | sh
 
+      - name: Debug RAILWAY_TOKEN
+        run: echo "RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}"
+
       - name: Authenticate Railway CLI
         run: |
           export RAILWAY_TOKEN=${{ secrets.RAILWAY_TOKEN }}
+          echo "Exported RAILWAY_TOKEN"
           railway status # This implicitly authenticates
+
+      - name: Debug Railway Status
+        run: railway status
 
       - name: Deploy to Railway
         run: railway up --service node-api
